<resources>
    <string name="app_name">School Agenda</string>
    <!-- navigation -->
    <string name="title_calendar">Calendar</string>
    <string name="title_exams">Exams</string>
    <string name="title_timetable">Timetable</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_assistance">Assistance</string>
    <string name="other_options">Other options</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="subjects">Subjects</string>
    <string name="subject_name">Name of the subject</string>
    <string name="color">Color</string>
    <string name="teacher">Teacher</string>
    <string name="save">Save</string>
    <string name="subject">Subject</string>
    <string name="task_name">Name of the task</string>
    <string name="duedate">Due date</string>
    <string name="pick_new_date">pick new date</string>
    <string name="markcompleted">Mark as completed</string>
    <string name="today">Today</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="completed">Completed</string>
    <string name="delete_prompt">Do you really want to delete this task?</string>
    <string name="task_deleted">Task successfully deleted.</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="friday">Friday</string>
    <string name="free">Free</string>
    <string name="choose_new_subject">Choose a new subject for this time</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="breaktime">BREAK</string>

</resources>
