<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="sergiotx.github.io.clase.Fragments.subjects.CreateNewSubject"
    android:padding="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_name" />

    <EditText
        android:id="@+id/createedittask_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject" />

    <Spinner
        android:id="@+id/createedittask_picksubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/duedate" />

    <DatePicker
        android:id="@+id/createedittask_pickdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </DatePicker>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/color" />

    <ImageView
        android:id="@+id/colorpicker"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="fitXY"
        android:src="@drawable/task"/>

</LinearLayout>
